<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" style="@style/Screen">
    <ImageView android:id="@+id/company_logo" style="@style/Body"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_width="@dimen/logo_width" android:layout_height="@dimen/logo_height" android:src="@drawable/company_logo" android:scaleType="fitCenter" android:contentDescription="@string/logo_description" />
    <TextView android:id="@+id/login_title" style="@style/Title" android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_logo" android:layout_marginTop="@dimen/space_medium" android:gravity="center" />
    <TextView android:id="@+id/login_subtitle" style="@style/Muted" android:text="@string/login_subtitle"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" android:layout_marginTop="@dimen/space_medium" android:gravity="center" />
    <TextView android:id="@+id/username_label" style="@style/Body" android:text="@string/username_label"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle" android:layout_marginTop="@dimen/space_medium" android:labelFor="@id/username" />
    <EditText android:id="@+id/username" style="@style/Field"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label" android:layout_marginTop="@dimen/space_medium" android:hint="@string/username_hint" android:inputType="textEmailAddress" android:autofillHints="username" android:imeOptions="actionNext" />
    <TextView android:id="@+id/password_label" style="@style/Body" android:text="@string/password_label"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" android:layout_marginTop="@dimen/space_medium" android:labelFor="@id/password" />
    <EditText android:id="@+id/password" style="@style/Field"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label" android:layout_marginTop="@dimen/space_medium" android:hint="@string/password_hint" android:inputType="textPassword" android:autofillHints="password" android:imeOptions="actionDone" />
    <CheckBox android:id="@+id/remember_username" style="@style/Body" android:text="@string/remember_username"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" android:layout_marginTop="@dimen/space_medium" android:minHeight="@dimen/touch_target" />
    <TextView android:id="@+id/login_error" style="@style/Muted"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember_username" android:layout_marginTop="@dimen/space_medium" android:textColor="@color/brand_red" android:accessibilityLiveRegion="polite" android:visibility="gone" tools:text="@string/request_failed" tools:visibility="visible" />
    <Button android:id="@+id/login_button" style="@style/Action" android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_error" android:layout_marginTop="@dimen/space_medium"  />
</androidx.constraintlayout.widget.ConstraintLayout>
